# VSDinside-Plugins

./: LICENSE  README.md
Examples/counter-plugin/: readme.md
Examples/counter-plugin/com.mirabox.counter.sdPlugin/: manifest.json  readme.md
Examples/counter-plugin/com.mirabox.counter.sdPlugin/plugin/: index.js
Examples/showNumber-plugin/: README.md
Examples/showNumber-plugin/numberDisplay/: CMakeLists.txt  HSDExampleAction.cpp  HSDExamplePlugin.cpp  HSDExamplePlugin.h
Examples/showNumber-plugin/numberDisplay/com.mirabox.numberDisplay.sdPlugin/: en.json  manifest.json  zh_CN.json
Examples/time-plugin/: README.md
Examples/time-plugin/time/: index.html
Examples/time-plugin/time/script/: autofile.cjs
Examples/time-plugin/time/src/: main.ts  manifest.cjs
Examples/timer-plugin/: README.md
Examples/timer-plugin/timer/src/: main.ts  manifest.cjs
Plugins/com.mirabox.streamdock.notes.sdPlugin/: ja.json  ko.json  pl.json  readme.md
Plugins/com.mirabox.streamdock.notes.sdPlugin/plugin/: index.html  note.html  package.json  vite.config.ts
Plugins/com.mirabox.streamdock.notes.sdPlugin/plugin/src-tauri/: Cargo.toml  tauri.conf.json
Plugins/com.mirabox.streamdock.notes.sdPlugin/plugin/src-tauri/capabilities/: default.json
Plugins/com.mirabox.streamdock.notes.sdPlugin/plugin/src-tauri/src/: desktop_layer.rs  lib.rs
Plugins/com.mirabox.streamdock.notes.sdPlugin/scripts/: autofile.cjs
Plugins/com.vsdinside.streamdock.notes.sdPlugin/: de.json  en.json  es.json  fr.json  it.json  manifest.json  pt.json  readme.md  ru.json  zh_CN.json
(+30 files in other folders)
